<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblCensorFunction"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:padding="10dp"
        android:text="@string/censorFireSection" />

    <TextView
        android:id="@+id/lblDescriptionOccur"
        android:layout_width="175dp"
        android:layout_height="294dp"
        android:layout_row="1"
        android:layout_column="0"
        android:padding="10dp" />

    <fragment
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        android:layout_width="191dp"
        android:layout_height="288dp" />

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/proceedMain" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/backMain" />
</GridLayout>